# Robotics

ESPWifiCarReceiver/include/: ESPHotspot.h  L298NController.h
ESPWifiCarReceiver/src/: L298NController.cpp  main.cpp
VibeLED/: .gitignore  platformio.ini
VibeLED/gui-controller/: Cargo.toml  config.json
VibeLED/gui-controller/src/: config.rs  main.rs  state.rs  worker.rs
VibeLED/gui-controller/src/audio/: mod.rs  player.rs  scanner.rs
VibeLED/gui-controller/src/esp/: broadcast.rs  mod.rs  scene.rs
VibeLED/gui-controller/src/gui/: app.rs
VibeLED/gui-controller/src/gui/panels/: esp_config.rs  esp_grid.rs  mod.rs  playback_bar.rs  top_bar.rs  track_list.rs
VibeLED/include/: ESPWifi.h
VibeLED/src/: ESPWifi.cpp  main.cpp
Wheel2/: Readme.md
Wheel2/arduino/: arduino.ino
Wheel2/include/: ESPHotspot.h  L298NController.h  TB6612FNGController.h
Wheel2/src/: ESPHotspot.cpp  L298NController.cpp  TB6612FNGController.cpp  main.cpp
