[package]
name = "gui-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe      = "0.27"
egui        = "0.27"
tokio       = { version = "1", features = ["full"] }
rodio       = "0.18"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
walkdir     = "2"
rfd         = "0.14"

[profile.release]
opt-level = 3
lto       = true
